# qtutils

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: DeployQt.cmake
lib/: CMakeLists.txt
lib/include/oclero/: QtConnectionUtils.hpp  QtEventFilterUtils.hpp  QtPointerUtils.hpp  QtSettingsUtils.hpp
lib/src/oclero/: QtFileUtils.cpp  QtScopedConnection.cpp  QtSettingsUtils.cpp
scripts/: build-ubuntu.sh  configure-msvc.sh  test-msvc.sh  test-ubuntu.sh
src/: CMakeLists.txt
src/include/oclero/: QtConnectionUtils.hpp  QtEnumUtils.hpp  QtEventFilterUtils.hpp  QtFileUtils.hpp  QtPointerUtils.hpp  QtScopedConnection.hpp  QtSettingsUtils.hpp  QtTestUtils.hpp
src/source/oclero/: QtScopedConnection.cpp  QtSettingsUtils.cpp
tests/: CMakeLists.txt
tests/src/: QtConnectionUtilsTests.cpp  QtConnectionUtilsTests.hpp  QtEnumUtilsTests.cpp  QtEnumUtilsTests.hpp  QtEventFilterUtilsTests.cpp  QtEventFilterUtilsTests.hpp  QtPointerUtilsTests.cpp  QtPointerUtilsTests.hpp  QtSettingsUtilsTests.cpp  QtSettingsUtilsTests.hpp  main.cpp
